--- a/serbioneer-front/src/app/components/homepage/table-view/table-view.component.sass
+++ b/serbioneer-front/src/app/components/homepage/table-view/table-view.component.sass
@@ -7,3 +7,15 @@ table
 
 td, th 
   width: 25%
+
+tr.mat-row
+  cursor: pointer
+td.mat-cell
+  padding-left: 10px !important
+  padding-right: 10px !important
+  padding-top: 5px
+  padding-bottom: 5px
+td.mat-cell:last-of-type
+  padding-right: 24px !important
+td.mat-cell:first-of-type
+  padding-left: 24px !important
