--- a/serbioneer-front/src/app/components/view-cultural-site/view-cultural-site.component.sass
+++ b/serbioneer-front/src/app/components/view-cultural-site/view-cultural-site.component.sass
@@ -37,19 +37,39 @@
 .subtitle-icon
     line-height: 43px
     font-size: 35px
+.rate-site-div
+    margin-left: 30px !important
+    margin-bottom: 10px !important
 .rate-site
     font-size: 16px
+    margin-right: 10px
+.comment-div
+    align-items: center
+.comment-write
+    font-size: 20px
+    margin-left: 15px
+.add-box
+    border: 1px solid lightgray
+    border-radius: 4px
+    padding-bottom: 13px
+.comment-btn
+    display: flex
+.comment-group
+    margin-bottom: 0
+    margin-top: 15px
+#new-comment-form-field
+    min-width: 100% !important
+#new-comment-input
+    min-width: 100% !important
 .file-title
     font-size: 20px
-.file-form
+    margin-top: 5px
+.file-group
     justify-content: center
-    margin: 15px !important
-// star rating size
-ngb-rating
-    font-size: 20px
-
+    text-align: left
 .site-image-content
     padding: 25px 60px
-
+ngb-rating
+    font-size: 20px
 app-comment
     width: 100%
