--- a/serbioneer-front/src/app/components/homepage/table-view/table-view.component.html
+++ b/serbioneer-front/src/app/components/homepage/table-view/table-view.component.html
@@ -7,36 +7,62 @@
 
         <!-- Header -->
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onClickRow(row.id)"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" (click)="onClickRow(row.id)">
+        </tr>
 
         <!-- Name Column -->
         <ng-container matColumnDef="name">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Name </th>
-        <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+        <td 
+            matTooltip="Click for detailed view"
+            matTooltipPosition="above"
+            mat-cell *matCellDef="let row"> 
+            {{row.name}} 
+        </td>
         </ng-container>
 
         <!-- Category Column -->
         <ng-container matColumnDef="category">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Category </th>
-        <td mat-cell *matCellDef="let row"> {{row.category}} </td>
+        <td 
+            matTooltip="Click for detailed view"
+            matTooltipPosition="above"
+            mat-cell *matCellDef="let row"> 
+            {{row.category}} 
+        </td>
         </ng-container>
 
         <!-- CategoryType Column -->
         <ng-container matColumnDef="categoryType">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Category Type </th>
-        <td mat-cell *matCellDef="let row"> {{row.categoryType}} </td>
+        <td 
+            matTooltip="Click for detailed view"
+            matTooltipPosition="above"
+            mat-cell *matCellDef="let row"> 
+            {{row.categoryType}} 
+        </td>
         </ng-container>
 
         <!-- Address Column -->
         <ng-container matColumnDef="address">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> Address </th>
-        <td mat-cell *matCellDef="let row"> {{row.address}} </td>
+        <td 
+            matTooltip="Click for detailed view"
+            matTooltipPosition="above"
+            mat-cell *matCellDef="let row"> 
+            {{row.address}} 
+        </td>
         </ng-container>
 
         <!-- City Column -->
         <ng-container matColumnDef="city">
         <th mat-header-cell *matHeaderCellDef mat-sort-header> City </th>
-        <td mat-cell *matCellDef="let row"> {{row.city}} </td>
+        <td 
+            matTooltip="Click for detailed view"
+            matTooltipPosition="above"
+            mat-cell *matCellDef="let row"> 
+            {{row.city}} 
+        </td>
         </ng-container>
 
     </table>
