--- a/serbioneer-front/src/styles.sass
+++ b/serbioneer-front/src/styles.sass
@@ -67,7 +67,9 @@ table
   width: 30px
 
 td.mat-cell:last-of-type
-  padding-right: 10px
+  padding-right: 24px !important
+td.mat-cell:first-of-type
+  padding-left: 24px !important
 
 /* Importing Bootstrap SCSS file. */
 @import '~bootstrap/scss/bootstrap'
