--- a/serbioneer-front/src/app/components/admin/categories/categories.component.sass
+++ b/serbioneer-front/src/app/components/admin/categories/categories.component.sass
@@ -23,7 +23,7 @@ th, td
   width: 30px
 
 td.mat-cell:last-of-type
-  padding-right: 10px
+  padding-right: 10px !important
 
 .title
   text-align: center
