--- a/serbioneer-front/src/app/components/homepage/table-view/table-view.component.html
+++ b/serbioneer-front/src/app/components/homepage/table-view/table-view.component.html
@@ -1,5 +1,5 @@
 <div>
-    <table mat-table [dataSource]="dataSource.content">
+    <table id = "cultural-site-table" mat-table [dataSource]="dataSource.content">
         <!-- No data row -->
         <tr class="mat-row" *matNoDataRow>
             <td class="mat-cell" colspan="2">No existing cultural sites.</td>
@@ -41,7 +41,7 @@
 
     </table>
 
-    <mat-paginator 
+    <mat-paginator id = "cultural-site-table-paginator"
         [length]="dataSource.totalElements" 
         [pageSize]="dataSource.size" 
         [pageSizeOptions]="[2,5,10]"
