--- a/serbioneer-front/src/app/components/admin/categories/categories.component.html
+++ b/serbioneer-front/src/app/components/admin/categories/categories.component.html
@@ -1,4 +1,4 @@
-<div class="col-md-12">
+<div id = "categories" class="col-md-12">
     <div class="row">
         <div class="col-md-6">
             <h2 class="title">Cultural site categories</h2>
