--- a/serbioneer-front/src/app/components/header/header.component.html
+++ b/serbioneer-front/src/app/components/header/header.component.html
@@ -33,9 +33,9 @@
             [ngClass]="{'active': activeLink==='homepage'}">
             Cultural sites
         </a>
-        <a id="add-site-btn" class="nav-item nav-link nav-btn btn" role="button" tabindex="0" 
-            (click)="onClick('add-site')" (keyup.enter)="onClick('add-site')"
-            [ngClass]="{'active': activeLink==='add-site'}">
+        <a id="new-cultural-site-btn" class="nav-item nav-link nav-btn btn" role="button" tabindex="0" 
+            (click)="onClick('new-cultural-site')" (keyup.enter)="onClick('new-cultural-site')"
+            [ngClass]="{'active': activeLink==='new-cultural-site'}">
             Add site
         </a>
         <a id="categories-btn" class="nav-item nav-link nav-btn btn" role="button" tabindex="0" 
