--- a/serbioneer-front/src/app/components/homepage/homepage.component.html
+++ b/serbioneer-front/src/app/components/homepage/homepage.component.html
@@ -34,7 +34,7 @@
             <div class="form-group">
                 <mat-form-field appearance="fill" class="form-field">
                     <mat-label>Filter by name</mat-label>
-                    <input (keyup)="onKey($event)" matInput placeholder="Ex. Kulturno dobro">
+                    <input (keyup)="onKey($event)" matInput placeholder="Ex. Exit">
                 </mat-form-field>
             </div>
         </div>
