--- a/serbioneer-front/src/app/components/inline-edit/inline-edit.component.html
+++ b/serbioneer-front/src/app/components/inline-edit/inline-edit.component.html
@@ -1,13 +1,13 @@
-<form [formGroup]="editForm" (ngSubmit)="onSubmit()">
+<form id = "inline-edit-form" [formGroup]="editForm" (ngSubmit)="onSubmit()">
     <div class="mat-subheading-2">Edit {{ entity }} </div>
     
     <mat-form-field>
-      <input matInput formControlName="editField" name="edit" [(ngModel)]="edit">
-      <mat-error *ngIf="editForm.get('editField')?.invalid">{{ getEditErrorMessage() }}</mat-error>
+      <input id = "inline-input" matInput formControlName="editField" name="edit" [(ngModel)]="edit">
+      <mat-error id = "inline-error" *ngIf="editForm.get('editField')?.invalid">{{ getEditErrorMessage() }}</mat-error>
     </mat-form-field>
 
     <div class="actions">
-      <button mat-button type="button" color="primary" (click)="onCancel()">Cancel</button>
-      <button mat-button type="submit" color="primary" [disabled]="editForm.invalid">Save</button>
+      <button id = "inline-cancel" mat-button type="button" color="primary" (click)="onCancel()">Cancel</button>
+      <button id = "inline-save" mat-button type="submit" color="primary" [disabled]="editForm.invalid">Save</button>
     </div>
 </form>
