--- a/serbioneer-front/src/app/components/admin/new-admin/new-admin.component.html
+++ b/serbioneer-front/src/app/components/admin/new-admin/new-admin.component.html
@@ -57,7 +57,7 @@
             </div>
             <div>
                 <button
-                    class="btn btn-theme"
+                    class="btn btn-purple"
                     type="submit"
                     [disabled] = "newAdminForm.invalid"
                     id="add-admin-button"
