--- a/serbioneer-front/src/app/components/change-password/change-password.component.html
+++ b/serbioneer-front/src/app/components/change-password/change-password.component.html
@@ -1,5 +1,6 @@
 <div class="card col-7 mx-auto">
-    <div class="card-body">
+    <div class="card-body align">
+        <h2>Change password</h2>
         <form id = "change-password-form" [formGroup] = "changePasswordForm" (ngSubmit) = "onSubmit()">
             <div class="form-group">
                 <mat-form-field id = "oldPassword-form-field" appearance="fill" class="form-field">
@@ -38,7 +39,7 @@
             <div>
                 <button
                     id = "change-password-btn"
-                    class="btn btn-theme"
+                    class="btn btn-purple"
                     type="submit"
                     [disabled] = "changePasswordForm.invalid"
                 >
