--- a/serbioneer-front/src/app/components/login-register/login/login.component.html
+++ b/serbioneer-front/src/app/components/login-register/login/login.component.html
@@ -19,7 +19,7 @@
                 </mat-form-field>
             </div>
             <div>
-                <button id = "login-btn" class="btn btn-theme" type="submit" [disabled]="loginForm.invalid">
+                <button id = "login-btn" class="btn btn-purple" type="submit" [disabled]="loginForm.invalid">
                     Log in
                 </button>
             </div>
