--- a/serbioneer-front/src/app/components/login-register/register/register.component.html
+++ b/serbioneer-front/src/app/components/login-register/register/register.component.html
@@ -49,7 +49,7 @@
             <div>
                 <button
                     id = "register-btn"
-                    class="btn btn-theme"
+                    class="btn btn-purple"
                     type="submit"
                     [disabled] = "registerForm.invalid"
                 >
