--- a/serbioneer-front/src/app/components/page-not-found/page-not-found.component.html
+++ b/serbioneer-front/src/app/components/page-not-found/page-not-found.component.html
@@ -10,7 +10,7 @@
         How you got here is a mystery. But you can click the button below
         to go back to the homepage.
       </p>
-      <button class="btn btn-theme" (click) = "onHome()">HOME</button>
+      <button class="btn btn-purple" (click) = "onHome()">HOME</button>
     </div>
   </div>
 </div>
