--- a/serbioneer-front/src/app/components/view-cultural-site/view-cultural-site.component.sass
+++ b/serbioneer-front/src/app/components/view-cultural-site/view-cultural-site.component.sass
@@ -17,7 +17,8 @@
     margin: 5px
     height: 25%
     width: 25%
-
+.join
+    margin-top: -10px
 .divide
     margin-top: 10px
     margin-bottom: 20px
