--- a/serbioneer-front/src/app/components/new-cultural-site/new-cultural-site.component.sass
+++ b/serbioneer-front/src/app/components/new-cultural-site/new-cultural-site.component.sass
@@ -1,5 +1,5 @@
 .textBox
-    height: 192px
+    height: 207px
 .add-box
     background-color: white
     border: 1px solid lightgray
@@ -7,3 +7,15 @@
     padding-top: 13px
     padding-bottom: 13px
     margin-bottom: 25px
+.file-group
+    justify-content: center
+    text-align: left
+    padding-left: 29px
+.file-input
+    max-width: 250px
+.site-image-content
+    padding: 25px 60px
+.image-preview
+    margin: 5px
+    height: 25%
+    width: 25%
