Add view admin component tests

--- a/serbioneer-front/src/app/components/admin/view-admin/view-admin.component.html
+++ b/serbioneer-front/src/app/components/admin/view-admin/view-admin.component.html
@@ -36,6 +36,7 @@
         </table>
 
         <mat-paginator 
+            id="admins-paginator"
             [length]="dataSource.totalElements" 
             [pageSize]="dataSource.size" 
             [pageSizeOptions]="[2,5,10]"
