--- a/serbioneer-front/src/app/components/add-news-article/add-news-article.component.html
+++ b/serbioneer-front/src/app/components/add-news-article/add-news-article.component.html
@@ -4,7 +4,7 @@
     <form [formGroup]="newsForm" (ngSubmit)="onSubmit($event)">
         <mat-form-field id="text-input" appearance="fill" class="form-field">
             <mat-label>News content</mat-label>
-            <input type="text" id="text-input" matInput formControlName="text" placeholder="Input content...">
+            <input type="text" id="text-input-field" matInput formControlName="text" placeholder="Input content...">
             <mat-error id = "name-error" *ngIf="newsForm.get('text')?.invalid">{{getTextErrorMessage()}}</mat-error>
         </mat-form-field>
         <div class="form-group file-form">
@@ -18,6 +18,7 @@
         </div>
         <img *ngFor='let url of images'  [src]="url" class="image-preview"> <br/>
         <button 
+            id = "submit-new-news-btn"
             mat-raised-button class="btn btn-purple" 
             type="submit"
             [disabled]="newsForm.invalid">
