--- a/serbioneer-front/src/app/components/new-cultural-site/new-cultural-site.component.html
+++ b/serbioneer-front/src/app/components/new-cultural-site/new-cultural-site.component.html
@@ -1,4 +1,4 @@
-<form [formGroup] = "newCulturalSiteForm" (ngSubmit) = "onSubmit()">
+<form id="cultural-site-form" [formGroup] = "newCulturalSiteForm" (ngSubmit) = "onSubmit()">
     <div class="row justify-content-md-center">
         <div class="col-md-8 add-box">
             <h2>{{ title }}</h2>
@@ -7,14 +7,15 @@
                     <div class="form-group">
                         <mat-form-field appearance="fill" class="form-field">
                             <mat-label>Cultural site name</mat-label>
-                            <input matInput placeholder="Ex. Exit" formControlName ="name">
-                            <mat-error *ngIf="newCulturalSiteForm.get('name')?.invalid">{{getRequiredFieldErrorMessage('name')}}</mat-error>
+                            <input id="name" matInput placeholder="Ex. Exit" formControlName ="name">
+                            <mat-error id="name-error" *ngIf="newCulturalSiteForm.get('name')?.invalid">{{getRequiredFieldErrorMessage('name')}}</mat-error>
                         </mat-form-field>
                     </div>
                     <div class="form-group">
                         <mat-form-field appearance="fill" class="form-field">
                             <mat-label>Cultural site address</mat-label>
                             <input 
+                                id="address"
                                 ngx-google-places-autocomplete
                                 [options]="autocompleteOptions"
                                 (onAddressChange)="addressChange($event)"
@@ -22,13 +23,13 @@
                                 placeholder="Ex. Vojvode Mišića 23, Šabac" 
                                 formControlName="address"
                             >
-                            <mat-error *ngIf="newCulturalSiteForm.get('address')?.invalid">{{getRequiredFieldErrorMessage('address')}}</mat-error>
+                            <mat-error id="address-error" *ngIf="newCulturalSiteForm.get('address')?.invalid">{{getRequiredFieldErrorMessage('address')}}</mat-error>
                         </mat-form-field>
                     </div>
                     <div class="form-group">
                         <mat-form-field appearance="fill" class="form-field">
                             <mat-label>Cultural site description</mat-label>
-                            <textarea class="textBox" matInput placeholder="Description" formControlName ="description"> </textarea>
+                            <textarea id="description" class="textBox" matInput placeholder="Description" formControlName ="description"> </textarea>
                         </mat-form-field>
                     </div>
                 </div>
@@ -36,32 +37,32 @@
                     <div class="form-group">
                         <mat-form-field appearance="fill" class="form-field">
                             <mat-label>Latitude</mat-label>
-                            <input matInput placeholder="Ex. 45" formControlName="lat">
+                            <input id="latitude" matInput placeholder="Ex. 45" formControlName="lat">
                         </mat-form-field>
                     </div>
                     <div class="form-group">
                         <mat-form-field appearance="fill" class="form-field">
                             <mat-label>Longitude</mat-label>
-                            <input matInput placeholder="Ex. 20.5" formControlName="lng">
+                            <input id="longitude" matInput placeholder="Ex. 20.5" formControlName="lng">
                         </mat-form-field>
                     </div>
                     <div class="form-group">
                         <mat-form-field appearance="fill" class="form-field">
                             <mat-label>Cultural site category</mat-label>
-                            <mat-select formControlName="category"
+                            <mat-select id="category" formControlName="category"
                                 (selectionChange)="categoryChange($event)">
                                 <mat-option *ngFor="let category of allCategoriesModel" [value]="category.id">{{category.name}}</mat-option>
                             </mat-select>
-                            <mat-error *ngIf="newCulturalSiteForm.get('category')?.invalid">{{getRequiredFieldErrorMessage('category')}}</mat-error>
+                            <mat-error id="category-error" *ngIf="newCulturalSiteForm.get('category')?.invalid">{{getRequiredFieldErrorMessage('category')}}</mat-error>
                         </mat-form-field>
                     </div>
                     <div class="form-group">
                         <mat-form-field appearance="fill" class="form-field">
                             <mat-label>{{categoryModel.name}} types</mat-label>
-                            <mat-select formControlName="categoryType">
+                            <mat-select id="category-type" formControlName="categoryType">
                                 <mat-option *ngFor="let categoryType of allCategoryTypesModel" [value]="categoryType.id">{{categoryType.name}}</mat-option>
                             </mat-select>
-                            <mat-error *ngIf="newCulturalSiteForm.get('categoryType')?.invalid">{{getRequiredFieldErrorMessage('categoryType')}}</mat-error>
+                            <mat-error id="type-error" *ngIf="newCulturalSiteForm.get('categoryType')?.invalid">{{getRequiredFieldErrorMessage('categoryType')}}</mat-error>
                         </mat-form-field>
                     </div>
                     <div class="form-group file-group">
@@ -73,13 +74,14 @@
                             multiple="" 
                             (change)="onFileChange($event)">
                     </div>
-                    <div>
+                    <div id="files">
                         <img *ngFor='let url of images'  [src]="url" class="image-preview">
                     </div>
                 </div>
             </div>
             <div class="row justify-content-md-center">
                 <button
+                    id="add-button"
                     class="btn btn-purple"
                     type="submit"
                     [disabled] = "newCulturalSiteForm.invalid"
