--- a/serbioneer-front/src/app/components/admin/view-admin/view-admin.component.html
+++ b/serbioneer-front/src/app/components/admin/view-admin/view-admin.component.html
@@ -35,7 +35,7 @@
 
         </table>
 
-        <mat-paginator 
+        <mat-paginator showFirstLastButtons
             id="admins-paginator"
             [length]="dataSource.totalElements" 
             [pageSize]="dataSource.size" 
