--- a/serbioneer-front/src/app/components/homepage/table-view/table-view.component.html
+++ b/serbioneer-front/src/app/components/homepage/table-view/table-view.component.html
@@ -67,7 +67,8 @@
 
     </table>
 
-    <mat-paginator id = "cultural-site-table-paginator"
+    <mat-paginator showFirstLastButtons
+        id = "cultural-site-table-paginator"
         [length]="dataSource.totalElements" 
         [pageSize]="dataSource.size" 
         [pageSizeOptions]="[2,5,10]"
