--- a/serbioneer-front/src/app/components/pending-comments/pending-comments.component.html
+++ b/serbioneer-front/src/app/components/pending-comments/pending-comments.component.html
@@ -10,8 +10,7 @@
         <app-approve-comment [comment]="comment" (commentSaidFetch)="fetchComments()"></app-approve-comment>
       </mat-list-item>
       <!--pomeriti paginator gore mozda?-->
-      <mat-paginator 
-          showFirstLastButtons
+      <mat-paginator showFirstLastButtons
           id="pending-comments-paginator"
           [length]="commentsData.totalElements" 
           [pageSize]="commentsData.size" 
