E2E tests working with https now

--- a/serbioneer-front/src/app/components/change-password/change-password.component.html
+++ b/serbioneer-front/src/app/components/change-password/change-password.component.html
@@ -38,7 +38,7 @@
             </div>
             <div>
                 <button
-                    id = "change-password-btn"
+                    id = "save-password-btn"
                     class="btn btn-purple"
                     type="submit"
                     [disabled] = "changePasswordForm.invalid"
