--- a/serbioneer-front/src/app/components/view-cultural-site/view-cultural-site.component.html
+++ b/serbioneer-front/src/app/components/view-cultural-site/view-cultural-site.component.html
@@ -14,7 +14,7 @@
                 </button>
             </div>
             <div class="col-2" *ngIf="adminIsLogged">
-                <button mat-raised-button class="btn btn-purple" (click)="openDialog()">
+                <button id ="add-news-btn" mat-raised-button class="btn btn-purple" (click)="openDialog()">
                     Add news
                 </button>
             </div>
@@ -36,9 +36,6 @@
         </div>
         <div class="row">
             <div id = "cultural-site-address" class="col"><h5>{{culturalSite.address}}, {{culturalSite.city}}</h5></div>
-        </div>
-        <div class="row">
-            <div class="col"><h6>{{culturalSite.category}}, {{culturalSite.categoryType}}</h6></div>
         </div>
         <div class="row rate-site-div" *ngIf="userIsLogged">
             <div class="rate-site">Rate {{culturalSite.name}}!</div>
@@ -106,7 +103,8 @@
                     <div class="row" *ngFor="let comment of comments.content">
                         <app-comment [comment]="comment" [culturalSiteId]="culturalSite.id"></app-comment>
                     </div>
-                    <mat-paginator showFirstLastButtons
+                    <mat-paginator 
+                        showFirstLastButtons
                         [length]="comments.totalElements" 
                         [pageSize]="comments.size" 
                         [pageSizeOptions]="[1,2,5,10]"
