--- a/serbioneer-front/src/app/components/view-cultural-site/view-cultural-site.component.html
+++ b/serbioneer-front/src/app/components/view-cultural-site/view-cultural-site.component.html
@@ -26,7 +26,7 @@
         </div>
         <div class="row join" *ngIf="adminIsLogged">
             <div class="col">
-                <button mat-icon-button color="primary" (click)="editCulturalSite()">
+                <button id = "edit-cultural-site" mat-icon-button color="primary" (click)="editCulturalSite()">
                     <mat-icon>create</mat-icon>
                 </button>
                 <button mat-icon-button color="warn" (click)="deleteCulturalSite()">
